change ismobile to isMobileOnly to keep sticky on tablets / fix bug search when value is changed

--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -3,6 +3,7 @@
 .search {
   font-family: "Quattrocento", cursive;
   width: 100%;
+  margin-bottom: 30px;
 
   &__results {
     margin: 0 150px 100px 150px;
